--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@sveltejs/kit": "^1.20.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
-    "prettier": "3.0.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.3",
     "svelte": "^4.0.5",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.2"
